# mnist-autoencoder

./: identificador.ipynb  main.py  pyproject.toml
