[project]
name = "mnist-autoencoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorflow-macos>=2.16.2",
    "tensorflow-metal>=1.2.0",
]
